# Medical-Research-Neuro-Symbolic-AI

./: .gitignore  .gitmodules  ARCHITECTURE_UPDATE_SUMMARY.md  AUTOGEN_INTEGRATION_COMPLETE.md  CLAUDE.md  CREDITS.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_ANALYSIS_REPORT.md  INTEGRATION_SUMMARY.md  LICENSE  MATHEMATICAL_FOUNDATION_INTEGRATION.md  Medical_Advancements.md  PHASE2_COMPLETE.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_READINESS_FINAL_ASSESSMENT.md  PRODUCTION_ROADMAP_DETAILED.md  README.md  ROADMAP.md  SUBMODULE_CLONING_SUMMARY.md  StartingUp.md  Submodules.md  Updated_Architecture.md  premedpro_ai.db  pyproject.toml  requirements-api.txt  run_api.py  test_api_simple.py  test_functional_reasoning.py  test_hybrid_bridge.py  test_hybrid_enhanced.py  test_integrations_simple.py  test_minimal.py  test_new_integrations.py  test_simulation_acceleration.py  test_symbolic_only.py
api/: __init__.py  main.py
api/core/: __init__.py  auth.py  config.py  exceptions.py  logging_config.py  middleware.py  rate_limit.py
api/database/: __init__.py  connection.py  models.py  repositories.py
api/routes/: __init__.py  application.py  health.py  mathematical_foundation.py  medical.py  user.py
config/: ethical_constraints.yaml  mathematical_foundation.yaml
core/: hybrid_bridge.py  research_acceleration.py  simulation_engine.py
core/clinical/: fhir_integration.py  omop_integration.py
core/enhanced_ethics/: medical_ethics_engine.py
core/medical_agents/: mathematical_foundation_agent.py  premedpro_agent.py
core/medical_knowledge/: knowledge_graph.py
core/neural/: biobert_integration.py  custom_neural.py  deepchem_integration.py  medclip_integration.py  medical_symbolicai_wrapper.py  monai_integration.py  neurotrale_integration.py  reinvent_integration.py  symbolicai_integration.py  torchlogic_integration.py
core/real_world_interface/: __init__.py  computational_executors.py  data_connectors.py  safety_validators.py
core/symbolic/: custom_logic.py  mem0_integration.py  nstk_integration.py  nucleoid_integration.py  peirce_integration.py  rdkit_integration.py  weaviate_integration.py
docs/: architecture.md  mathematical_foundation.md
ethical_audit/: Cargo.toml  holisticai_integration.py
ethical_audit/py_bindings/: aix360_integration.py
ethical_audit/src/: lib.rs  main.rs
examples/: basic_usage.py  demo_integrations.py  mathematical_foundation_integration_test.py  phase2_demo.py  test_integrations.py
math_foundation/: autodock_integration.py  bionemo_integration.py  openmm_integration.py  python_wrapper.py  qft_qm.jl  thermo_entropy.jl
orchestration/: autogen_integration.py  langchain_integration.py  openssa_integration.py
orchestration/agents/: ai_scientist_integration.py  aiwaves_integration.py  autonomous_agents_integration.py  camel_ai_integration.py  crewai_integration.py
orchestration/external_ai_integration/: superagi_integration.py
scripts/: setup.sh
utils/: awesome_production_ml_integration.py
