[package]
name = "ethical_audit"
version = "0.1.0"
edition = "2021"
authors = ["Medical Research AI Team"]
description = "Ethical audit layer for Medical Research AI with safety and privacy enforcement"
license = "MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Privacy and cryptography
differential-privacy = "0.1"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Audit trail and persistence
rusqlite = { version = "0.30", features = ["bundled"] }

# Configuration
config = "0.14"
toml = "0.8"

[lib]
name = "ethical_audit"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "audit_server"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = ["privacy", "audit_trail", "python_bindings"]
privacy = ["differential-privacy"]
audit_trail = ["rusqlite"]
python_bindings = ["pyo3"]
standalone = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true 